--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^4.1.1
   dynamic_color: ^1.4.0
   dots_indicator: ^2.1.0
+  expansion_tile_card: ^2.0.0
 
 dev_dependencies:
   flutter_test:
